--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -1,17 +1,17 @@
 ja:
   activerecord:
     models:
-      basket: 貸出セッション
       checked_item: 貸出資料
       checkin: 返却
       checkout: 貸出
 #      checkout_family: 家族の貸出
-      reserve: 予約
-#      retained_manifestation: 取置済み(未連絡)資料
-#      reserve_family: 家族の予約
-#      lending_policy: 貸出規則
+      retained_manifestation: 取置済み(未連絡)資料
 
     attributes:
+      basket:
+        user: 利用者
+        note: 注記
+        lock_version: ロックバージョン
       checked_item:
         due_date: 期日
         user_comment: 利用者の注記
@@ -47,6 +47,10 @@ ja:
         position: 順位
         done: 連絡完了
         failed_update: 更新に失敗しました。
+        item_identifier: "取り置き資料 所蔵情報ID"
+      retained_manifestation:
+        done: 連絡完了
+        failed_update: 更新に失敗しました。
 
   basket:
     my_status: "現在の利用状況"
@@ -70,7 +74,6 @@ ja:
     excessed_renewal_limit: "貸出更新回数の上限を超えています。"
     all_checkout: "全ての貸出"
     my_checkout: "自分の貸出"
-    no_checkout: "貸出中の資料はありません。"
     number_of_day_overdue: "延滞日数"
     extend: "貸出期間の延長"
   reserve:
@@ -99,6 +102,12 @@ ja:
     completed_reserve: "取り置き済みの予約"
     in_process_reserve: "作業中の予約"
     update: "予約の更新"
+    retain: "予約資料の取り置き"
+    add: 登録
+    cannot_retain_item: "取り置きのできない資料です。"
+    not_found: "予約が見つかりません。"
+    retain_error: "取り置き処理に失敗しました。"
+    no_reserve: 予約中の資料はありません
   checked_item:
     not_available_for_checkout: "この資料の貸出はできません。(状態不正)"
     new_serial: "この資料の貸出はできません。(雑誌の最新号)"
