--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -88,6 +88,7 @@ ja:
     number_of_day_overdue: "延滞日数"
     extend: "貸出期間の延長"
     printout_in_progress: "貸出票の印刷を開始しました"
+    renew_checkout: "再貸出"
   reserve:
     user_reserve: "%{login_name} さんの予約資料"
     library_group_reserve: "%{library_group_name} での予約資料"
