refs 7872 画面から督促リストに登録する

--- a/config/locales/translation_en.yml
+++ b/config/locales/translation_en.yml
@@ -106,6 +106,8 @@ en:
     extend: extend checkout period
     printout_in_progress: Started to export checkout list.
     renew_checkout: Renew checkout
+    add_reminder_list: Add to ReminderList
+    exist_reminder_list: Raminder List
     search:
       with_returned: With returned
       overdue: Only overdued
