--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -160,6 +160,7 @@ ja:
     ignore_restriction: "制限を無視する"
     library_closed_today: "この資料の図書館は本日休館日です。"
     not_set_long_loan_period: "長期期間貸出期日を設定してください。"
+    in_library_use_only: "この資料は禁帯出です。"
   checkin:
     item_not_found: "資料が見つかりません。"
     enter_item_identifier: "所蔵情報番号を入力してください。"
