--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -172,6 +172,8 @@ ja:
     successfully_checked_in: "この資料は正常に返却されました。"
     not_available_for_checkin: "この資料の返却はできません。(状態不正)"
     overdue_item: "この資料は貸出期限が過ぎています。"
+    item_reserved: "この資料は予約されています。取置処理をしてください。"
+    item_retained: "この資料は予約されています。取置処理をしました。"
   checkout_history:
     checkout: 貸出
     checkin: 返却
