refs 8757 返却済みの貸出に返却日と返却作業者を表示

--- a/config/locales/translation_en.yml
+++ b/config/locales/translation_en.yml
@@ -117,6 +117,7 @@ en:
     renew_checkout: Renew checkout
     add_reminder_list: Add to ReminderList
     exist_reminder_list: Raminder List
+    returned: Returned
     search:
       with_returned: With returned
       overdue: Only overdued
