refs 8844 貸出・予約一覧のレコードが0の時の対応

--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -64,9 +64,9 @@ ja:
 
     errors:
       messages:
+        item_not_exist: "%{status}資料はありません。"
         checkout:
           invalid_date: "貸出期日の指定が不正です。"
-
 
 
   basket:
