--- a/config/locales/translation_en.yml
+++ b/config/locales/translation_en.yml
@@ -174,6 +174,7 @@ en:
     overdue_item: Checkout of the item is overdue.
     item_reserved: The item is reserved
     item_retained: The item is reserved and retained.
+    confirm: "Are you sure? (cannnot cancel)"
   checkout_history:
     checkout: Checkout
     checkin: Checkin
